--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,6 @@ app/lib/env/dev_env.g.dart
 app/lib/env/prod_env.g.dart
 /app/lib/libobjectbox.dylib
 /app/lib/objectbox-model.json
+
+flutter/
+app/ios/DerivedData/
