fix justfile for modal funcs

--- a/backend/modal/Justfile
+++ b/backend/modal/Justfile
@@ -1,4 +1,4 @@
 deploy:
     modal deploy vad_modal.py -e main
-    modal deploy speech_profile_modal.py -e main
+    cd .. && modal deploy modal/speech_profile_modal.py -e main
 
